<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp">

    <!-- Bloc flèche + titre -->
    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/arrow_left"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:fontFamily="@font/jakarta_bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="@id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@id/buttonBack"
        android:layout_marginStart="16dp"/>

    <!-- Bloc photo profil, nom, rating et bouton valider -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:alpha="1"
        android:src="@drawable/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        app:shapeAppearanceOverlay="@style/CircleImageView"/>


    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manon Garcia"
            android:fontFamily="@font/jakarta_semibold"
            android:textColor="#666666"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="0"
            android:isIndicator="false"/>
    </LinearLayout>



    <com.google.android.material.chip.Chip
        android:id="@+id/btnSubmit"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:chipBackgroundColor="#CF2F2F"
        app:chipCornerRadius="12dp"
        app:chipStrokeColor="#CF2F2F"
        app:textEndPadding="0dp"
        app:textStartPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"/>


    <!-- Zone de texte pour l'avis -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:strokeColor="#DADADA"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/etReview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/share"
            android:textSize="12sp"
            android:fontFamily="@font/jakarta_regular"
            android:padding="12dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:background="@android:color/transparent"/>
    </com.google.android.material.card.MaterialCardView>










    <!-- ScrollView contenant les reviews -->
    <ScrollView
        android:id="@+id/reviewScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/reviewContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
