<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="452dp"
            android:contentDescription="@string/tajmahal_typical_food_description"
            android:foreground="@drawable/gradient"
            android:scaleType="centerCrop"
            android:src="@drawable/food_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRestaurantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jakarta_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvRestaurantType"
            app:layout_constraintTop_toBottomOf="@id/tvRestaurantType"
            tools:text="Taj Mahal" />

        <TextView
            android:id="@+id/tvRestaurantType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jakarta_regular"
            android:textColor="#666666"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="Restaurant Indien" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_on_premise"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_site"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="#CF2F2F"
                app:chipCornerRadius="12dp"
                app:chipStrokeColor="#CF2F2F"
                app:textEndPadding="0dp"
                app:textStartPadding="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_take_away"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_away"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="#CF2F2F"
                app:chipCornerRadius="12dp"
                app:chipStrokeColor="#CF2F2F"
                app:textEndPadding="0dp"
                app:textStartPadding="0dp" />



        </com.google.android.material.chip.ChipGroup>

        <!--Review block-->

        <!-- Bloc review -->
        <LinearLayout
            android:id="@+id/reviewSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/chipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- RatingBlock à gauche : note + étoiles + nombre de reviews -->


            <!-- Espace entre ratingBlock et les barres -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="30sp"
                android:paddingStart="0sp">

                <TextView
                    android:id="@+id/RatingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0"
                    android:textColor="#666666"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressBackgroundTint="#CCCCCC"
                    android:progressTint="#FFB800"
                    android:rating="4"
                    android:secondaryProgressTint="#FFB800"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/RatingNumber" />

                <TextView
                    android:id="@+id/ReviewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:text="(5)"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <!-- Bloc barres + "Laisser un avis" à droite -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ratingBarsBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <!-- Barres horizontales -->
                <ProgressBar
                    android:id="@+id/progressBar5"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="70"
                    android:progressTint="#FFB800"
                    android:progressBackgroundTint="#E0E0E0"
                    android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ProgressBar
                    android:id="@+id/progressBar4"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="50"
                    android:progressTint="#FFB800"
                    android:progressBackgroundTint="#E0E0E0"
                    android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar5"
                    android:layout_marginTop="4dp"/>

                <ProgressBar
                    android:id="@+id/progressBar3"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="30"
                    android:progressTint="#FFB800"
                    android:progressBackgroundTint="#E0E0E0"
                    android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar4"
                    android:layout_marginTop="4dp"/>

                <ProgressBar
                    android:id="@+id/progressBar2"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="20"
                    android:progressTint="#FFB800"
                    android:progressBackgroundTint="#E0E0E0"
                    android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar3"
                    android:layout_marginTop="4dp"/>

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="10"
                    android:progressTint="#FFB800"
                    android:progressBackgroundTint="#E0E0E0"
                    android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar2"
                    android:layout_marginTop="4dp"/>

                <!-- Laisser un avis en bas à droite -->
                <TextView
                    android:id="@+id/addReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/progressBar1"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>






        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="0.75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="#DADADA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewSection" />

        <ImageView
            android:id="@+id/icon_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/icone_weekday"
            android:src="@drawable/baseline_access_time_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantDay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantDay" />

        <TextView
            android:id="@+id/tvRestaurantDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/jakarta_semibold"
            android:textColor="#666"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/icon_hours"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            tools:text="Mardi" />

        <TextView
            android:id="@+id/tvRestaurantHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/jakarta_semibold"
            android:textColor="#666"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            tools:text="11h30 - 14h30・18h30 - 22h00" />


        <ImageView
            android:id="@+id/icon_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/icon_gps"
            android:scaleType="centerCrop"
            android:src="@drawable/outline_location_on_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantAddress" />

        <TextView
            android:id="@+id/tvRestaurantAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jakarta_semibold"
            android:textColor="#666"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/icon_adress"
            app:layout_constraintTop_toBottomOf="@+id/tvRestaurantHours"
            tools:text="12  Avenue de la Brique - 75010 Paris" />

        <ImageView
            android:id="@+id/buttonAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/button_adress"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_arrow_forward_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantAddress" />

        <ImageView
            android:id="@+id/icon_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/icone_website"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_language_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantWebsite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantWebsite" />

        <TextView
            android:id="@+id/tvRestaurantWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jakarta_semibold"
            android:textColor="#666"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/icon_web"
            app:layout_constraintTop_toBottomOf="@+id/tvRestaurantAddress"
            tools:text="www.tajmahal.fr" />

        <ImageView
            android:id="@+id/buttonWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/button_website"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_arrow_forward_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantWebsite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantWebsite" />

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/phone_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/outline_phone_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantPhoneNumber" />

        <TextView
            android:id="@+id/tvRestaurantPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jakarta_semibold"
            android:textColor="#666"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/icon_phone"
            app:layout_constraintTop_toBottomOf="@+id/tvRestaurantWebsite"
            tools:text="06 12 34 56 78" />

        <ImageView
            android:id="@+id/buttonPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/button_phone"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_arrow_forward_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantPhoneNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>